--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,7 @@ services:
     build:
       dockerfile: Dockerfile
       context: .
+    ports:
+      - "8000:8000"
+    environment:
+      - DEBUG=True
