--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ djangorestframework==3.5.4
 markdown==2.6.8
 pygraphviz==1.3.1
 six==1.10.0               # via django-extensions
+Werkzeug==0.11.15
