--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,21 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+coreapi==2.2.4            # via django-rest-swagger, openapi-codec
+coreschema==0.0.4         # via coreapi
 django-extensions==1.7.6
 django-filter==1.0.1
+django-rest-swagger==2.1.1
 django==1.10.5
 djangorestframework==3.5.4
+itypes==1.1.0             # via coreapi
+jinja2==2.9.5             # via coreschema
 markdown==2.6.8
+MarkupSafe==0.23          # via jinja2
+openapi-codec==1.3.1      # via django-rest-swagger
 pygraphviz==1.3.1
+requests==2.13.0          # via coreapi
+simplejson==3.10.0        # via django-rest-swagger
 six==1.10.0               # via django-extensions
-Werkzeug==0.11.15
+uritemplate==3.0.0        # via coreapi
+werkzeug==0.11.15
